tests/enumerror/enumerror.exp
Error: enumerror.js:10
 10: isActive({state: 'PAUSE'});
     ^^^^^^^^^^^^^^^^^^^^^^^^^^ function call
 10: isActive({state: 'PAUSE'});
                      ^^^^^^^ property `PAUSE`. Property not found in
                                   v------
  3: function isActive(ad: {state: $Keys<{
  4:     PAUSED: string;
  5:     ACTIVE: string;
  6:     DELETED: string;
  7: }>}): boolean {
     -^ object type

Error: enumerror.js:20
 20: isActive2({state: 'PAUSE'});
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ function call
 20: isActive2({state: 'PAUSE'});
                       ^^^^^^^ property `PAUSE`. Property not found in
 17: function isActive2(ad: {state: $Keys<typeof MyStates>}): boolean {
                                    ^^^^^^^^^^^^^^^^^^^^^^ object literal


Found 2 errors
